fixed sticky top (overflow)

--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,14 @@ html, body {
     margin: 0;
     padding: 0;
     width: 100%;
-    overflow-x: hidden;
+
 }
 .container {
     margin-left: 0;
     margin-right: 0;
     padding: 0;
     --bs-gutter-x: 0px;
+    overflow-x: hidden;
 }
 
 .whole-page {
@@ -90,6 +91,10 @@ img {
 section {
     width: 100vw;
 }
+.blur {
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+    }
 
 
 
@@ -391,7 +396,6 @@ beige: #ead6b8
     margin-right: 5px;
     border: none;
     backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
 }
 .navbar-nav {
     text-align: center;
